--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# csv files
+# ignore files
 *.csv
 *.pdf
 /src/log.txt
 /src/logs.txt
+/src/halloffame.pkl
