--- a/src/settings.json
+++ b/src/settings.json
@@ -5,5 +5,5 @@
     "csv_s_dir": "../csv_s",
     "candle_input_type": "OHLCV",
     "candle_output_type": "OHLCV",
-    "setup": 2
+    "setup_code": 0
 }
