--- a/src/settings.json
+++ b/src/settings.json
@@ -3,6 +3,7 @@
     "timeframe": "M5",
     "csv_dir": "../csv",
     "csv_s_dir": "../csv_s",
+    "csv_o_dir": "../csv_o",
     "candle_input_type": "OHLCV",
     "candle_output_type": "OHLCV",
     "setup_code": 1,
