--- a/src/settings.json
+++ b/src/settings.json
@@ -1,7 +1,7 @@
 {
     "symbol_out": "EURUSD",
     "timeframe": "M5",
-    "csv_dir": "../csv",
+    "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
     "csv_o_dir": "../csv_o",
     "candle_input_type": "OHLCV",
