--- a/src/settings.json
+++ b/src/settings.json
@@ -3,8 +3,8 @@
     "timeframe": "M5",
     "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
-    "csv_s_cache_dir": "../csv_s_cache",
     "csv_o_dir": "../csv_o",
+    "root_cache_dir": "../csv_s_cache",
     "candle_input_type": "OHLCV",
     "candle_output_type": "OHLCV",
     "setup_code": 1,
