--- a/src/settings.json
+++ b/src/settings.json
@@ -2,12 +2,12 @@
     "symbol_out": "XAUUSD",
     "timeframe": "H1",
     "deterministic": true,
-    "random_seed": 1,
+    "random_seed": 102,
     "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
     "csv_o_dir": "../csv_o",
     "root_cache_dir": "../csv_s_cache",
-    "candle_input_type": "OHLC",
+    "candle_input_type": "OHLCV",
     "candle_output_type": "C",
     "setup_code": 1,
     "setup_uses_differentiation": false
