--- a/src/settings.json
+++ b/src/settings.json
@@ -1,13 +1,13 @@
 {
     "symbol_out": "XAUUSD",
-    "timeframe": "M20",
+    "timeframe": "M30",
     "deterministic": true,
     "random_seed": 1,
     "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
     "csv_o_dir": "../csv_o",
     "root_cache_dir": "../csv_s_cache",
-    "candle_input_type": "OHLCV",
+    "candle_input_type": "OHLC",
     "candle_output_type": "C",
     "setup_code": 1,
     "setup_uses_differentiation": false
