--- a/src/settings.json
+++ b/src/settings.json
@@ -1,14 +1,18 @@
 {
     "symbol_out": "XAUUSD",
-    "timeframe": "H1",
+    "timeframe": "M5",
     "deterministic": true,
     "random_seed": 1,
     "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
     "csv_o_dir": "../csv_o",
     "root_cache_dir": "../csv_s_cache",
-    "candle_input_type": "OHLC",
+    "candle_input_type": "CV",
     "candle_output_type": "C",
     "setup_code": 1,
-    "setup_uses_differentiation": false
+    "setup_uses_differentiation": false,
+    "scaler_feature_range": [
+        0,
+        1
+    ]
 }
