--- a/src/settings.json
+++ b/src/settings.json
@@ -1,6 +1,6 @@
 {
     "symbol_out": "XAUUSD",
-    "timeframe": "M5",
+    "timeframe": "H1",
     "deterministic": true,
     "random_seed": 1,
     "temp_dir": "../temp",
