--- a/src/settings.json
+++ b/src/settings.json
@@ -1,16 +1,18 @@
 {
-    "symbol_out": "XAUUSD",
-    "timeframe": "H1",
+    "symbol_out": "XAUUSD-MA(5)",
+    "timeframe": "M15",
     "deterministic": true,
     "random_seed": 1,
     "temp_dir": "../temp",
     "csv_s_dir": "../csv_s",
     "csv_o_dir": "../csv_o",
     "root_cache_dir": "../csv_s_cache",
-    "candle_input_type": "CV",
+    "candle_input_type": "C",
     "candle_output_type": "C",
     "setup_code": 1,
     "setup_uses_differentiation": false,
+    "csv_content": "HETEROGENEOUS_DEFAULT",
+    "normalization_method": "standard",
     "scaler_feature_range": [
         0,
         1
